# EtabExtension

./: .gitignore  AGENTS.md  CRITICAL_BUG_SNAPSHOT_STATE_POISONING.md  Cargo.toml  ETABS_LIFECYCLE_FIX_PROPOSAL.md  ETABS_LIFECYCLE_IMPLEMENTATION_PLAN.md  ETABS_SIDECAR_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  README.md  SPRINT_W9_W12.md  api_errors.txt  calc_test.txt  package-lock.json  package.json  pnpm-lock.yaml  test_output.txt  test_run_final.txt
.codex-target/: .rustc_info.json
.codex-target/debug/.fingerprint/autocfg-4a4e01d500b12a33/: output-lib-autocfg
.codex-target/debug/.fingerprint/cfg-if-f10bf300c0c543b1/: output-lib-cfg_if
.codex-target/debug/.fingerprint/futures-core-99a14f0ec7623e96/: output-lib-futures_core
.codex-target/debug/.fingerprint/icu_normalizer_data-a88cd9a2c22e7599/: output-build-script-build-script-build
.codex-target/debug/.fingerprint/litemap-8a02baf8d49ec222/: output-lib-litemap
.codex-target/debug/.fingerprint/parking_lot_core-ccbe220e1557a0b4/: output-build-script-build-script-build
.codex-target/debug/.fingerprint/pin-project-lite-8e662e8bf859a0b7/: output-lib-pin_project_lite
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
crates/ext/: Cargo.toml  agents.md
crates/ext-agent/: Cargo.toml
crates/ext-agent-llm/: Cargo.toml
crates/ext-agent-llm/src/: lib.rs
crates/ext-agent/src/: lib.rs
crates/ext-api/: Cargo.toml
crates/ext-api/src/: analyze.rs  branch.rs  checkout.rs  commit.rs  config_cmd.rs  context.rs  diff.rs  etabs.rs  guards.rs  init.rs  lib.rs  log.rs  path_utils.rs  remote.rs  report.rs  stash.rs  status.rs  switch.rs
crates/ext-api/tests/: analyze_version.rs  etabs_api.rs  etabs_live.rs  foundation.rs  vcs_cycle.rs
crates/ext-calc/: Cargo.toml  EXT_CALC_SPEC.md  EXT_CAL_SPEC_UNIFIED.md  EXT_CAL_SPEC_V3.md  EXT_CAL_SPEC_V4.md
crates/ext-calc/src/: code_params.rs  lib.rs  main.rs  output.rs  unit_convert.rs
crates/ext-calc/src/checks/: base_reaction.rs  displacement_wind.rs  drift_seismic.rs  drift_wind.rs  mod.rs  modal.rs  pier_axial.rs  pier_shear.rs  pier_shear_seismic.rs  pier_shear_stress.rs  pier_shear_wind.rs  story_forces.rs  torsional.rs
crates/ext-calc/src/tables/: base_reactions.rs  group_assignments.rs  joint_drift.rs  material_by_story.rs  material_props.rs  mod.rs  modal.rs  pier_forces.rs  pier_section.rs  story_def.rs  story_forces.rs
crates/ext-calc/tests/fixtures/results_realistic/: base_reactions.parquet  calc_output.json  group_assignments.parquet  joint_drifts.parquet  material_list_by_story.parquet  material_properties_concrete_data.parquet  modal_participating_mass_ratios.parquet  pier_forces.parquet  pier_section_properties.parquet  story_definitions.parquet  story_forces.parquet
crates/ext-calc/tests/fixtures/results_realistic/.etabs-ext/: config.local.toml  config.toml
crates/ext-core/: Cargo.toml
crates/ext-core/src/: branch.rs  fs.rs  lib.rs  remote.rs  reports.rs  stash.rs  state.rs  vcs.rs  version.rs
crates/ext-core/src/branch/: copy.rs  mod.rs
crates/ext-core/src/sidecar/: client.rs  commands.rs  mod.rs  types.rs
crates/ext-core/src/stash/: mod.rs
crates/ext-core/src/vcs/: mod.rs  read.rs  subprocess.rs
crates/ext-core/src/version/: manifest.rs  mod.rs  snapshot.rs
crates/ext-db/: Cargo.toml
crates/ext-db/src/: lib.rs
crates/ext-e2k/: Cargo.toml
crates/ext-error/src/: lib.rs
crates/ext-render/: Cargo.toml  EXT_RENDER_DESIGN.md
crates/ext-render/src/: chart_types.rs  lib.rs
crates/ext-render/src/chart_build/: base_shear.rs  displacement.rs  drift.rs  mod.rs  modal.rs  pier_axial.rs  pier_shear.rs  story_forces.rs  torsional.rs
crates/ext-render/src/render_html/: mod.rs
crates/ext-render/src/render_svg/: mod.rs
crates/ext-report/: Cargo.toml  EXT_REPORT_DESIGN.md  EXT_REPORT_SPEC.md  INVARIANTS.md  typst_data-loading_Introspection.md  typst_foundation.md  typst_layout.md  typst_math.md  typst_model.md
crates/ext-report/src/: data.rs  lib.rs  main.rs  report_document.rs  report_types.rs  theme.rs
crates/ext-report/src/data/: base_reactions.rs  displacement.rs  drift.rs  format.rs  modal.rs  ordering.rs  pier_axial.rs  pier_shear.rs  story_forces.rs  summary.rs  torsional.rs
crates/ext-report/src/pdf/: mod.rs  procedures.rs  renderer.rs  template.rs
crates/ext-report/src/pdf/sections/: calculations.rs  chart.rs  mod.rs  summary.rs  table.rs
crates/ext-report/src/pdf/template/: pages.rs  partials.rs  pier_shear_pages.rs  review_pages.rs  sequence.rs  standard_pages.rs
crates/ext-report/src/pdf/template/partials/: components.typ  layouts.typ  page_setup.typ  styles.typ
crates/ext-tauri/: Cargo.toml
crates/ext-tauri/src/: commands.rs  lib.rs
crates/ext/skill/: SKILL.md
crates/ext/skill/references/: architecture.md  concepts.md  examples.md  reference.md  sidecar.md  workflow.md
crates/ext/skill/specs/: 2026-03-29-week3-4-vcs-spec.md  2026-03-29-week3-4-vcs-visual-test-spec.md  2026-03-29-week5-6-spec.md  2026-04-01-week7-8-calc-report-spec.md  2026-04-02-ext-calc-spec.md  Pier-check-week-7-8.md  ext-report-refactor.md  handoff-week7-8.md  plan-week-7-8.md
crates/ext/src/: main.rs  output.rs
crates/ext/src/args/: mod.rs
crates/ext/src/commands/: analyze.rs  branch.rs  calc.rs  checkout.rs  commit.rs  config.rs  diff.rs  etabs_analyze.rs  etabs_close.rs  etabs_export_results.rs  etabs_open.rs  etabs_recover.rs  etabs_status.rs  etabs_unlock.rs  init.rs  log.rs  mod.rs  render.rs  report.rs  show.rs  stash.rs  status.rs  switch.rs
crates/ext/src/utils/: metrics.rs  mod.rs  output_channel.rs
crates/ext/tests/: config_cli.rs  etabs_cli.rs  foundation_cli.rs  report_cli.rs  vcs_cli.rs
crates/test-support/: fake_sidecar.rs
docs/: ext-calc-calculation-breakdown.md  ext-council-readout.md  ext-highrise-engineering-acceptance-checklist.md  ext-render-calculation-breakdown.md
docs/superpowers/plans/: 2026-04-06-tauri-render-report-integration.md
proofs/echart_charm/: Cargo.toml  Readme.md
proofs/echart_charm/src/: chart.rs  main.rs  typst.rs
(+50 files in other folders)
