[workspace]
members = [
    ##
    ### ✅ Foundation layer — no business logic, no I/O frameworks
    ##
    "crates/ext-error",         # 📄 All EtabsError variants. Depends on nothing.
    "crates/ext-core",          # 📄 Pure domain logic: state machine, branch, version,
                                #    stash, sidecar client, vcs ops (gix reads + git
                                #    subprocess writes), atomic file ops, OneDrive
                                #    detection, Polars calculations, Typst generators.
    "crates/ext-db",            # 📄 config.toml + config.local.toml resolution,
                                #    state.json, SQLite project registry + agent
                                #    session history (Phase 2) via sea-orm.

    ##
    ### ✅ API layer — single source of truth
    ##
    "crates/ext-api",           # 📄 All application workflows as plain async Rust fns.
                                #    init, status, commit, analyze, branch, switch,
                                #    checkout, stash, etabs open/close/unlock/recover,
                                #    diff, report, push, pull, clone, config.

    ##
    ### ✅ AI layer — provider-agnostic, privacy-first
    ##
    "crates/ext-agent-llm",     # 📄 LlmClient trait + backends.
                                #    Phase 1: Claude (reqwest). Phase 2: OpenAI-compat
                                #    (async-openai) covers Ollama, LM Studio, OpenAI,
                                #    Azure. Local-first: Ollama is the default provider.
    "crates/ext-agent",         # 📄 Conversation loop, tool registry, confirmation gate,
                                #    system prompt builder (SKILL.md + live status),
                                #    in-memory history. Used by CLI and Tauri identically.

    ##
    ### Binaries
    ##
    "crates/ext",               # 📄 CLI binary. Thin clap layer. Zero business logic.
                                #    Includes `ext chat` subcommand (Phase 1).
    "crates/ext-tauri",         # 📄 Desktop app. Tauri IPC wrappers over ext-api
                                #    and ext-agent. Chat panel added Phase 2.
]
resolver = "2"

[workspace.package]
repository = "https://github.com/tadodev/EtabExtension"
edition = "2024"
authors = ["EtabExtension Contributors"]
rust-version = "1.89"

[workspace.dependencies]
# ── Internal crates ────────────────────────────────────────────────────────────
ext-error     = { path = "crates/ext-error" }
ext-core      = { path = "crates/ext-core" }
ext-db        = { path = "crates/ext-db" }
ext-api       = { path = "crates/ext-api" }
ext-agent-llm = { path = "crates/ext-agent-llm" }
ext-agent     = { path = "crates/ext-agent" }

# ── Async runtime ──────────────────────────────────────────────────────────────
tokio   = { version = "1.49", features = ["full"] }
futures = "0.3.32"

# ── Error handling ─────────────────────────────────────────────────────────────
thiserror = "2.0.18"
anyhow    = "1.0.102"

# ── Serialization ──────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0.148"
toml       = "0.9.8"

# ── VCS reads (pure Rust, no C dependency) ────────────────────────────────────
# Writes go through `git` subprocess — no git2 needed.
gix = { version = "0.80.0", default-features = false, features = [
    "blob-diff",
    "revision",
    "index",
] }

# ── Storage ────────────────────────────────────────────────────────────────────
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }

# ── Analysis data ──────────────────────────────────────────────────────────────
polars = { version = "0.53.0", default-features = false, features = [
    "parquet",
    "lazy",
    "dtype-full",
] }

# ── PDF reports ────────────────────────────────────────────────────────────────
typst = "0.14.2"

# ── AI — Phase 1: Claude backend (direct HTTP, no SDK needed) ─────────────────
# Used in ext-agent-llm/src/claude.rs only.
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",      # needed for streaming token responses in Phase 2
] }

# ── AI — Phase 2: OpenAI-compatible backend ───────────────────────────────────
# Covers Ollama (local/private), LM Studio, OpenAI, Azure OpenAI.
# One crate, many providers via base_url override in config.local.toml.
# Not used in Phase 1 — added to workspace.dependencies now so the
# feature flag in ext-agent-llm compiles cleanly from day one.
async-openai = { version = "0.33.0", default-features = false, features = [
    "rustls",
    "chat-completion",
] }

# ── CLI ────────────────────────────────────────────────────────────────────────
clap = { version = "4.5.60", default-features = false, features = [
    "derive",
    "std",
    "help",
    "unstable-markdown",
] }
# Progress bars for .edb copies and long-running agent tools (analyze, report).
indicatif = "0.18.4"
# readline with history + line editing for `ext chat` REPL.
rustyline = "17.0.2"

# ── System / process ──────────────────────────────────────────────────────────
sysinfo = { version = "0.38.2", default-features = false }
dirs    = "6.0.0"

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid        = { version = "1.21.0", features = ["v4", "serde"] }
chrono      = { version = "0.4.44", default-features = false, features = ["std"] }
parking_lot = "0.12.4"
itertools   = "0.14.0"
tracing     = "0.1.44"
tracing-subscriber = "0.3.22"

# ── Testing ────────────────────────────────────────────────────────────────────
tempfile = "3.26.0"
snapbox  = "1.0.0"

# ── TypeScript type generation ─────────────────────────────────────────────────
ts-rs = { version = "12.0.1", features = ["serde-compat", "no-serde-warnings"] }

# ── Explicitly excluded — do not add ──────────────────────────────────────────
# notify        — no file watching; mtime checked on-demand
# notify-rust   — no OS toast notifications in Phase 1
# md5 / sha2    — architecture forbids hashing for state; git owns commit hashes
# walkdir       — std::fs::read_dir sufficient for flat vN/ structure
# rmcp          — no MCP; agent exposed via ext chat and Tauri panel directly
# git2          — writes go through git subprocess; gix handles all reads
# acp (rust-sdk)— no agent-to-agent protocol needed until Phase 3

# ── Lints ─────────────────────────────────────────────────────────────────────
[workspace.lints.clippy]
all                   = "deny"
uninlined_format_args = "deny"

# ── Profiles ──────────────────────────────────────────────────────────────────
[profile.dev]
incremental = false
debug       = "line-tables-only"

[profile.test]
incremental = false

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true

[profile.bench]
codegen-units = 256
lto           = false
opt-level     = 3
debug         = "line-tables-only"

# ── Keep debug builds fast ─────────────────────────────────────────────────────
[profile.dev.package]
gix          = { opt-level = 3 }
gix-diff     = { opt-level = 3 }
gix-object   = { opt-level = 3 }
gix-ref      = { opt-level = 3 }
gix-pack     = { opt-level = 3 }
gix-hash     = { opt-level = 3 }
gix-actor    = { opt-level = 3 }
gix-config   = { opt-level = 3 }
gix-worktree = { opt-level = 3 }
sha1-checked = { opt-level = 3 }
zlib-rs      = { opt-level = 3 }
serde        = { opt-level = 3 }
serde_json   = { opt-level = 3 }
polars       = { opt-level = 3 }
polars-core  = { opt-level = 3 }
polars-io    = { opt-level = 3 }
polars-lazy  = { opt-level = 3 }
arrow-data   = { opt-level = 3 }