[workspace]
members = [
    ##
    ### ✅ Foundation layer — no business logic, no I/O frameworks
    ##
    "crates/ext-error",         # All EtabsError variants. Depends on nothing.
    "crates/ext-core",          # Pure domain logic: state machine, branch, version,
                                #   stash, sidecar client, vcs ops (gix reads + git
                                #   subprocess writes), atomic file ops, OneDrive
                                #   detection, Polars calculations, Typst generators.
    "crates/ext-db",            # config.toml + config.local.toml resolution,
                                #   state.json, SQLite project registry + agent
                                #   session history (Phase 2) via sea-orm.

    ##
    ### ✅ API layer — single source of truth
    ##
    "crates/ext-api",           # All application workflows as plain async Rust fns.
                                #   init, status, commit, analyze, branch, switch,
                                #   checkout, stash, etabs open/close/unlock/recover,
                                #   diff, report, push, pull, clone, config.

    ##
    ### ✅ AI layer — provider-agnostic, privacy-first
    ##
    "crates/ext-agent-llm",     # LlmClient trait + backends.
                                #   Phase 1: Claude (reqwest). Phase 2: OpenAI-compat
                                #   (async-openai) covers Ollama, LM Studio, OpenAI,
                                #   Azure. Local-first: Ollama is the default provider.
    "crates/ext-agent",         # Conversation loop, tool registry, confirmation gate,
                                #   system prompt builder (SKILL.md + live status),
                                #   in-memory history. Used by CLI and Tauri identically.

    ##
    ### Binaries
    ##
    "crates/ext",               # CLI binary. Thin clap layer. Zero business logic.
                                #   Includes `ext chat` subcommand (Phase 1).
    "crates/ext-tauri", "crates/ext-calc", "crates/ext-render", "crates/ext-report", "crates/ext-e2k",         # Desktop app. Tauri IPC wrappers over ext-api
                                #   and ext-agent. Chat panel added Phase 2.
]
resolver = "2"

[workspace.package]
repository = "https://github.com/tadodev/EtabExtension"
edition = "2024"
authors = ["EtabExtension Contributors"]
rust-version = "1.94"

[workspace.dependencies]
# ── Internal crates ────────────────────────────────────────────────────────────
ext-error     = { path = "crates/ext-error" }
ext-core      = { path = "crates/ext-core" }
ext-db        = { path = "crates/ext-db" }
ext-api       = { path = "crates/ext-api" }
ext-agent-llm = { path = "crates/ext-agent-llm" }
ext-agent     = { path = "crates/ext-agent" }

# ── Async runtime ──────────────────────────────────────────────────────────────
tokio   = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"

# ── Error handling ─────────────────────────────────────────────────────────────
thiserror = "2.0.18"
anyhow    = "1.0.102"

# ── Serialization ──────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0.148"
toml       = "0.9.8"
regex      = "1.12.3"
schemars   = "1.2.1"

# ── VCS reads (pure Rust, no C dependency) ────────────────────────────────────
# Writes go through `git` subprocess — no git2 needed.
gix = { version = "0.80.0", default-features = false, features = [
    "blob-diff",
    "revision",
    "index",
] }

# ── Storage ────────────────────────────────────────────────────────────────────
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }

# ── Analysis data ──────────────────────────────────────────────────────────────
polars = { version = "0.53.0", default-features = false, features = [
    "parquet",
    "lazy",
    "dtype-full",
] }

# ── PDF reports ────────────────────────────────────────────────────────────────
# typst      — compilation engine (builds the document model)
# typst-pdf  — renders compiled document to PDF bytes
# Both required; typst alone does not produce PDF output.
typst     = "0.14.2"
typst-pdf = "0.14.2"

# ── AI — Phase 1: Claude backend (direct HTTP, no SDK needed) ─────────────────
# Used in ext-agent-llm/src/claude.rs only.
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }

# ── AI — Phase 2: OpenAI-compatible backend ───────────────────────────────────
# Covers Ollama (local/private), LM Studio, OpenAI, Azure OpenAI.
async-openai = { version = "0.33.0", default-features = false, features = [
    "rustls",
] }

# ── CLI ────────────────────────────────────────────────────────────────────────
clap = { version = "4.5.60", default-features = false, features = [
    "derive",
    "std",
    "help",
    # NOTE: "unstable-markdown" removed — requires nightly.
    # Re-add if/when stabilized or if you pin to a nightly toolchain.
] }
rmcp = "1.2.0"
# Progress bars for .edb copies and long-running agent tools.
indicatif = "0.18.4"
# readline with history + line editing for `ext chat` REPL.
rustyline = "17.0.2"
shell-words = "1.1.1"

# ── System / process ──────────────────────────────────────────────────────────
sysinfo = { version = "0.38.4", default-features = false }
dirs    = "6.0.0"
open    = "5.3.3"
git2    = "0.20.4"

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid        = { version = "1.22.0", features = ["v4", "serde"] }
chrono      = { version = "0.4.41", default-features = false, features = ["std", "serde", "clock"] }
parking_lot = "0.12"
itertools   = "0.14"
nonempty    = "0.12.0"
self_cell   = "1.2.2"
sha2        = "0.10.9"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = "0.3.1"

# ── Testing ────────────────────────────────────────────────────────────────────
tempfile = "3.27.0"
snapbox  = "1.1.0"

# ── TypeScript type generation ─────────────────────────────────────────────────
ts-rs = { version = "12.0.1", features = ["serde-compat", "no-serde-warnings"] }

# ── Explicitly excluded — do not add ──────────────────────────────────────────
# notify        — no file watching; mtime checked on-demand
# notify-rust   — no OS toast notifications in Phase 1
# md5           — architecture forbids hashing for state; git owns commit hashes
# walkdir       — std::fs::read_dir sufficient for flat vN/ structure
# acp (rust-sdk)— no agent-to-agent protocol needed until Phase 3

# ── Lints ─────────────────────────────────────────────────────────────────────
[workspace.lints.clippy]
all                   = "deny"
uninlined_format_args = "deny"

# ── Profiles ──────────────────────────────────────────────────────────────────
[profile.dev]
opt-level     = 0
incremental   = false
debug         = "line-tables-only"
codegen-units = 4          # cap parallel codegen workers; prevents OOM on full workspace builds

[profile.test]
incremental   = false
codegen-units = 4          # same OOM guard for test binaries

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true

[profile.bench]
codegen-units = 256
lto           = false
opt-level     = 3
debug         = "line-tables-only"

# ── Keep debug builds fast for heavy analytical crates ────────────────────────
# Only list packages that actually exist in the workspace dependency tree.
[profile.dev.package]
serde        = { opt-level = 3 }
serde_json   = { opt-level = 3 }
polars       = { opt-level = 3 }
polars-core  = { opt-level = 3 }
polars-io    = { opt-level = 3 }
polars-lazy  = { opt-level = 3 }
zlib-rs      = { opt-level = 3 }
