[package]
name = "ext-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
ext-core = { workspace = true }
ext-error = { workspace = true }
ext-db = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true, features = ["system"] }

[dev-dependencies]
tempfile = { workspace = true }
