[package]
name = "ext-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
ext-error  = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
ts-rs      = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
